@@ -1,6 +1,7 @@
 Version 0.0.1 to
 ----------------------
-* add LUDecomposition method to Matrix in matrix.py
+* add IntegerIfIntOrLong function in rational.py.
+* add LUDecomposition method to Matrix in matrix.py.
 * now you can factor a very big but very smooth integer by trial division.
 * speed up real.log, and it now accepts float.
 * fix bugs in rational.py.
